📃 docs: 更正文档路径
